--- a/templates/form.html
+++ b/templates/form.html
@@ -112,7 +112,15 @@
           <img id="data-histogram" />
         </div>
         <div class="data-weights text-center" data-hide="visual">
-          <div class="weights"></div>
+          <div class="weights">
+            <table id="weights-container" class="template">
+              <caption></caption>
+              <thead>
+                <tr class="weight-features"></tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
           <div class="training-accuracy py-2"></div>
           <div class="test-accuracy py-2"></div>
         </div>
