--- a/templates/dpml.html
+++ b/templates/dpml.html
@@ -5,6 +5,7 @@ Learning {% endblock %} {% block formFields %}
   <header class="section-header">
     <h6>Select Mechanism</h6>
   </header>
+    <p class="header-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eligendi mollitia magnam omnis deserunt quaerat assumenda in repudiandae, libero ut repellendus aut neque!</p>
   <div class="d-flex justify-content-center functions tab-select">
     <label class="btn btn-outline" for="function-logreg" data-control="logreg"
       >Logistic Regression</label
@@ -82,7 +83,7 @@ Learning {% endblock %} {% block formFields %}
   </header>
   <div>
     <div class="form-row my-4 justify-content-around">
-      <div class="col-auto my-3" data-hide="NaiveBayes kMeans">
+      <div class="col-auto my-3" data-hide="NaiveBayes kMeans" data-help="Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eligendi mollitia magnam omnis deserunt quaerat assumenda in repudiandae">
         <div class="input-group parameter-input">
           <div class="input-group-prepend">
             <label for="lambda" class="input-group-text">Lambda</label>
