--- a/templates/form.html
+++ b/templates/form.html
@@ -9,7 +9,7 @@
   <div class="row justify-content-between align-items-center">
     <form class="form upload-form px-0 col-12 needs-validation">
       <div class="upload-container text-center my-3">
-        <div
+        <section
           class="d-flex flex-column justify-content-around align-items-center"
         >
           <header>
@@ -28,6 +28,9 @@
               <div class="size-error">
                 Your file exceeds the maximum allowed file size of 1 MB.
               </div>
+              <div class="file-error">
+                File not Allowed
+              </div>
               <div class="upload-caption">
                 Upload your dataset in appropriate format (.xls, .txt, ...)
                 here.
@@ -39,13 +42,18 @@
           >
             <div class="col-6 form-group dataset-upload my-0">
               <label for="select-file" class="btn my-2">Select File</label>
-              <input type="file" id="select-file" accept=".txt,.csv" />
+              <input
+                type="file"
+                id="select-file"
+                accept=".txt,.csv,.data,.xls,.tsv,.db"
+                required
+              />
             </div>
             <div class="col-6">
               <a class="btn my-2" id="upload-data">Upload</a>
             </div>
           </div>
-        </div>
+        </section>
       </div>
       <div class="parameters-container">
         {% block formFields %}{% endblock %}
