--- a/templates/form.html
+++ b/templates/form.html
@@ -120,11 +120,11 @@
           <img id="data-histogram" />
         </div>
         <div class="data-weights text-center" data-hide="visual">
+          <div class="table-caption"></div>
           <div class="weights">
             <table id="weights-container" class="template">
-              <caption></caption>
               <thead>
-                <tr class="weight-classes"></tr>
+                <tr class="weight-features"></tr>
               </thead>
               <tbody></tbody>
             </table>
