--- a/static/css/style.css
+++ b/static/css/style.css
@@ -578,6 +578,45 @@ p.header-subtitle {
   background-size: contain;
   background-position: center;
 }
+.data-weights .weights {
+  max-width: 100%;
+  overflow: auto;
+  margin: 10px auto 20px;
+}
+.weights::-webkit-scrollbar {
+  height: 15px;
+  position: absolute;
+  top: 0;
+}
+.weights::-webkit-scrollbar-button {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background: #888;
+  border-radius: 2px;
+  margin: 5px;
+}
+.weights::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background: #f8f8f8;
+  border-radius: 6px;
+  padding: 2px;
+}
+.weights::-webkit-scrollbar-thumb {
+  background-color: #aaa;
+  outline: 1px solid slategrey;
+  border-radius: 6px;
+  border: 1px solid #ccc;
+}
+.weights::-webkit-scrollbar-thumb:active {
+  background-color: #888;
+}
+.weights th[scope="row"] {
+  position: sticky;
+  left: -1px;
+}
+.table-caption {
+  text-transform: uppercase;
+  font-weight: 700;
+}
 .data-graph .graph-container {
   padding: 9px 16px;
   border-radius: 10px;
@@ -785,7 +824,6 @@ p.header-subtitle {
 table#weights-container {
   width: auto;
   border: 2px solid rgba(0, 0, 0, 0.15);
-  margin: 10px auto 20px;
 }
 
 #weights-container td,
