--- a/templates/form.html
+++ b/templates/form.html
@@ -123,6 +123,9 @@
           <div class="table-caption"></div>
           <div class="weights">
             <table id="weights-container" class="template">
+              <div class="table-right-scroll">
+                <span>&gt;</span>
+              </div>
               <thead>
                 <tr class="weight-features"></tr>
               </thead>
