--- a/static/css/style.css
+++ b/static/css/style.css
@@ -581,11 +581,29 @@ p.header-subtitle {
 .data-weights .weights {
   max-width: 100%;
   overflow: auto;
+  position: relative;
   margin: 10px auto 20px;
+}
+.table-right-scroll {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5) 90%);
+  font-size: 50px;
+  font-weight: 900;
+  font-family: monospace;
+  cursor: pointer;
 }
 .weights::-webkit-scrollbar {
   height: 15px;
   position: absolute;
+  position: relative;
   top: 0;
 }
 .weights::-webkit-scrollbar-button {
@@ -823,6 +841,7 @@ p.header-subtitle {
 }
 table#weights-container {
   width: auto;
+  margin: auto;
   border: 2px solid rgba(0, 0, 0, 0.15);
 }
 
